Think we just got inject support back in Bridge!

--- a/dada/templates/plugins/bridge/default.tmpl
+++ b/dada/templates/plugins/bridge/default.tmpl
@@ -167,7 +167,7 @@
 				<div id="bridge_mail_forward_pipe_params">
 					<fieldset>
 						<label for="bridge_mail_forward_pipe_command">Email Forward Pipe Command (example):</label><br /> 
-						<input type="text" class="full" id="bridge_mail_forward_pipe_command" value="|<!-- tmpl_var plugin_path escape="HTML" -->/<!-- tmpl_var plugin_filename escape="HTML" --> --inject --list <!-- tmpl_var list_settings.list -->" />
+						<input type="text" class="full" id="bridge_mail_forward_pipe_command" value="|<!-- tmpl_var program_abs_path --> --inject --list <!-- tmpl_var list_settings.list -->" />
 					</fieldset>
 					 
 				</div> 
