--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -120,7 +120,7 @@
 		   Grab content from this webpage address (URL):
 		  </label>
 		  <br />
-		  <input type="text" name="url" id="url" class="full" value="http://" />
+		  <input type="url" name="url" id="url" class="full" value="http://" />
 		</p>
 		<p>
 		  <input type="radio" name="content_from" id="content_from_textarea" value="content_from_textarea" />
