--- a/dada/templates/draft_saved_notification_widget.tmpl
+++ b/dada/templates/draft_saved_notification_widget.tmpl
@@ -11,7 +11,7 @@
 <!-- /tmpl_if --> 
 
 <!-- tmpl_if expr="(role eq 'stationary')" -->
-    <h1>Stationary Saved!</h1> 
+    <h1>Stationery Saved!</h1> 
     <div class="buttonfloat">
         <input type="button" id="keep_working_on_draft"     value="Thanks!"   class="processing" /> 
     </div> 
