--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -18,7 +18,7 @@
 	 	             Draft
 	 	        <!-- /tmpl_if -->
 	 	        <!-- tmpl_if expr="(draft_role eq 'stationary')" --> 
-	 	            Stationary
+	 	            Stationery
 	 	        <!-- /tmpl_if -->
 	 	        <!-- tmpl_if expr="(draft_role eq 'schedule')" --> 
 	 	            Schedule
