--- a/dada/templates/send_a_list_message_button_widget.tmpl
+++ b/dada/templates/send_a_list_message_button_widget.tmpl
@@ -6,9 +6,9 @@
 	
 	    <input type="hidden" name="default_save_draft_button_label" id="default_save_draft_button_label" value="Save as: Draft" />
     	<!-- tmpl_if expr="(draft_role eq 'stationary')" -->
-    		<input type="button" class="bigger_button processing savedraft" name="process" value="Save Stationary"  data-role="stationary" id="save_stationary_button"  />
-            <input type="button" class="bigger_button processing create_from_stationary" name="process" value="New Draft From Stationary"  data-role="stationary" />
-            or <a href="#"       class="cancel_message" id="delete_stationary_link">Delete Stationary</a>
+    		<input type="button" class="bigger_button processing savedraft" name="process" value="Save Stationery"  data-role="stationary" id="save_stationary_button"  />
+            <input type="button" class="bigger_button processing create_from_stationary" name="process" value="New Draft From Stationery"  data-role="stationary" />
+            or <a href="#"       class="cancel_message" id="delete_stationary_link">Delete Stationery</a>
         <!-- /tmpl_if -->
         <!-- tmpl_if expr="(draft_role eq 'schedule')" -->
             <input type="button" class="bigger_button processing savedraft" name="process" value="Save Schedule"  data-role="schedule" id="save_schedule_button"  />
@@ -20,7 +20,7 @@
             <!-- tmpl_else --> 
                 <input type="button" class="bigger_button processing savedraft" name="process" value="Save as: Draft"       data-role="draft" id="save_draft_button" />       	
             <!-- /tmpl_if -->             
-            <input type="button" class="bigger_button processing savedraft" name="process" value="Save as: Stationary"  data-role="stationary" id="save_as_stationary_button" />
+            <input type="button" class="bigger_button processing savedraft" name="process" value="Save as: Stationery"  data-role="stationary" id="save_as_stationary_button" />
             or <a href="#"       class="cancel_message" id="cancel_message_link">Cancel Message</a>
         <!-- /tmpl_if --> 
     <!-- /tmpl_unless -->
