--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -17,7 +17,7 @@ $PROGRAM_URL   = '<!-- tmpl_var PROGRAM_URL -->';
 <!-- tmpl_if configure_s_program_url --> 
 $S_PROGRAM_URL = '<!-- tmpl_var s_program_url_S_PROGRAM_URL -->';
 <!-- /tmpl_if -->
-$RUNNING_AS = '<!-- tmpl_var fastcgi_RUNNING_AS default="CGI" -->';
+$RUNNING_UNDER = '<!-- tmpl_var deployment_RUNNING_UNDER default="CGI" -->';
 
 #---------------------------------------------------------------------#
 # The location (server path + URL) of static, support files
@@ -26,7 +26,6 @@ $SUPPORT_FILES = {
 	dir => '<!-- tmpl_var support_files_dir_path -->', 
 	url => '<!-- tmpl_var support_files_dir_url -->', 
 };
-
 
 #---------------------------------------------------------------------#
 # The Dada Mail Root Pass: 
