--- a/dada/installer-disabled/templates/cl_help_scrn.tmpl
+++ b/dada/installer-disabled/templates/cl_help_scrn.tmpl
@@ -68,6 +68,10 @@ are UPGRADING Dada Mail, you may have other options.
 	Pg
 		Uses a PostgreSQL database
 		
+	SQLite
+	
+	    Uses a SQLite database
+		
 If you set, --backend to either, "mysql", or, "Pg" you will also have to pass
 the following parameters: 
 
