--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -279,10 +279,10 @@ $CONFIRMATION_TOKEN_OPTIONS = {
 # Amazon SES Options
 
 $AMAZON_SES_OPTIONS = { 
-    AWS_endpoint                     => '<!-- tmpl_var AWS_endpoint -->', 
+    AWS_endpoint                     => '<!-- tmpl_var AWS_endpoint default="https://email.us-east-1.amazonaws.com/" -->', 
 	AWSAccessKeyId                   => '<!-- tmpl_var AWSAccessKeyId -->', 
 	AWSSecretKey                     => '<!-- tmpl_var AWSSecretKey -->', 
-	Allowed_Sending_Quota_Percentage => '<!-- tmpl_var Allowed_Sending_Quota_Percentage -->',
+	Allowed_Sending_Quota_Percentage => '<!-- tmpl_var Allowed_Sending_Quota_Percentage default="90" -->',
 };
 <!-- /tmpl_if -->
 
