Clarified this a bit.

--- a/dada/templates/plugins/bridge/default.tmpl
+++ b/dada/templates/plugins/bridge/default.tmpl
@@ -766,7 +766,7 @@ General
          </td> 
          <td>
           <label for="send_received_msg">
-           Send a message to the original sender, letting them know their message was received
+           Send, "Message Received" notification
           </label>
           <br /> 
           Mass Mailing can take a long time. A, &quot;message received!&quot; message sent to the original sender
